# vox

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  GPU_PERF_REPORT.md  RESEARCH_BRIEF.md  RESEARCH_PROMPT.md  RESEARCH_REPORT.md  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: ci.yml
assets/: materials.ron
assets/scenes/: lava_basin.ron  stress_test.ron
crates/app/: Cargo.toml
crates/app/src/: app.rs  headless.rs  main.rs  scene.rs
crates/bootstrap-shader/: Cargo.toml
crates/bootstrap-shader/src/: lib.rs
crates/bootstrap-test/: Cargo.toml  build.rs
crates/bootstrap-test/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: camera.rs  lib.rs  player.rs  renderer.rs
crates/content/: Cargo.toml
crates/content/src/: convert.rs  lib.rs  scene.rs  types.rs  vox_loader.rs
crates/gpu-core/: Cargo.toml
crates/gpu-core/src/: buffer.rs  chunk_pool.rs  context.rs  error.rs  frame.rs  image.rs  lib.rs  pipeline.rs  swapchain.rs  vram_budget.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: ca_simulation.rs  island_detector.rs  lib.rs  passes.rs  pbmpm_zones.rs  push_constants.rs  readback.rs  rigid_body_tracker.rs  simulation.rs
crates/server/tests/: gpu_integration.rs
crates/shader-builder/: Cargo.toml  build.rs
crates/shader-builder/src/: main.rs
crates/shaders/: Cargo.toml
crates/shaders/src/: ca_types.rs  lib.rs  pbmpm_types.rs  types.rs
crates/shaders/src/compute/: ca_compact.rs  ca_gravity.rs  ca_margolus.rs  ca_render.rs  ca_spread.rs  ca_support.rs  ca_thermal.rs  ca_to_render.rs  clear_grid.rs  clear_grid_sparse.rs  clear_hash_grid.rs  compact_active_bricks.rs  compute_activity.rs  compute_dirty_tiles.rs  compute_occupancy.rs  count_per_brick.rs  explosion.rs  g2p.rs  g2p_sparse.rs  grid_update.rs  grid_update_hash.rs  grid_update_sparse.rs  hash_grid.rs  mark_active.rs  mod.rs  p2g.rs  p2g_sparse.rs  pbmpm_clear_grid.rs  pbmpm_g2p.rs  pbmpm_grid_update.rs  pbmpm_p2g.rs  prefix_sum.rs  prepare_indirect.rs  react.rs  render.rs  render_far_field.rs  scatter_particles.rs  toolbar_overlay.rs  update_sleep.rs  voxelize.rs
crates/shaders/src/compute/render/: lighting.rs  materials.rs  math.rs  mod.rs  sky.rs
crates/shared/: Cargo.toml
crates/shared/src/: chunk_gpu.rs  config.rs  constants.rs  far_field.rs  indirect.rs  lib.rs  material.rs  material_ca.rs  particle.rs  phase.rs  physics.rs  reaction.rs  reaction_ca.rs  svd.rs  voxel.rs
crates/sim-cpu/: Cargo.toml
crates/sim-cpu/src/: ca_grid.rs  chemistry.rs  grid.rs  lib.rs  test_world.rs  thermal.rs  world.rs
crates/sim-cpu/tests/: behavior.rs  proptest_sim.rs
crates/world/: Cargo.toml
crates/world/src/: chunk.rs  lib.rs  manager.rs  storage.rs  terrain.rs
docs/agents/: gpu.md  render.md  sim.md
docs/design/: perf-refactor-v2.md
scripts/: pre-commit
world_cache/: -1_1_-1.chunk  -1_1_0.chunk  -1_2_-1.chunk  -1_3_-1.chunk  -1_3_0.chunk  -1_3_1.chunk  0_1_-1.chunk  0_1_2.chunk  0_2_-1.chunk  0_3_-1.chunk  0_3_2.chunk  1_1_-1.chunk  1_2_-1.chunk  1_3_-1.chunk  2_1_0.chunk  2_1_2.chunk  2_2_0.chunk  2_2_2.chunk  2_3_0.chunk
