[package]
name = "content"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { workspace = true, features = ["std"] }
glam = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dot_vox = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
