[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { workspace = true, features = ["std"] }
protocol = { workspace = true }
sim-cpu = { workspace = true }
gpu-core = { workspace = true }
glam = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
