[package]
name = "sim-cpu"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { workspace = true, features = ["std"] }
glam = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
approx = { workspace = true }
